# Ludos

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
data/characters/3cbd2932/: 李梓萌（右侧下首身影）.mem.txt  王信球（上首身影）.mem.txt  王刚（左侧下首身影）.mem.txt
data/sessions/: session_3cbd2932.json
doc/v0.1.0/: api.md  changelog.md  design.md  world_knowledge_plan.md  并行决策优化计划.md  改造后代码点评文档.md  改造后设计点评文档.md
plugins/: __init__.py
plugins/tools/: __init__.py  example.py
scripts/: run.py  visualize.py
src/: __init__.py  main.py
src/agents/: __init__.py  character.py  llm_client.py  moderator.py  polisher.py
src/config/: __init__.py  prompts.py  settings.py
src/graphs/: character_subgraph.py  deduction_loop.py  initialization.py  orchestrator.py  polishing.py  state.py
src/memory/: __init__.py  checkpointer.py  interaction_store.py
src/models/: schemas.py  types.py
src/tools/: __init__.py  end_detector.py  info_filter.py  pressure_tracker.py  prompt_loader.py  registry.py  text_formatter.py  turn_manager.py
src/utils/: character_memory.py  errors.py  half_structured_parser.py  interaction_log_writer.py  json_parser.py  logging.py  memory_protocol.py  validators.py  visualization.py
tests/: conftest.py
tests/fixtures/: sample_narrative.txt
tests/unit/: test_end_detector.py  test_info_filter.py  test_json_parser.py  test_pressure_tracker.py  test_text_formatter.py  test_validators.py
